2022-05-15 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/z80/gen.c:
	  Fix bug #3388.
	* src/SDCCsymt.c,
	  support/valdiag/tests/bug-3389.c:
	  device/include/float.h,
	  support/regression/tests/bug-1805702.c:
	  Fix bug #3389.

2022-05-13 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/bug-3385.c:
	  Disable new test for hc08 and s08, where it fails (bug #3386).

2022-05-12 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* Merge regtest branch.

2022-05-12 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/stm8/peeph.def,
	  support/regression/tests/bug-3385.c:
	  Fix bug #3385, patch by Ryan Hartlage (ryanplusplus).

2022-05-11 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/MakeList:
	  Exclude tests that fail on mcs51 due to abnormal stops.

2022-05-11 Felix Salfelder <felix AT salfelder.org>

	* support/regression/MakeList
	  exclude queen on pdk15-stack-auto.

2022-05-11 Felix Salfelder <felix AT salfelder.org>

	* support/regression/Makefile.in:
	  verbosity fix.

2022-05-10 Felix Salfelder <felix AT salfelder.org>

	* support/valdiag/Makefile.in:
	  adjust compact-results invocation, add Makefile rule.

2022-05-10 Felix Salfelder <felix AT salfelder.org>

	* support/regression/compact-results.py:
	  simplify compact-results output.

2022-05-10 Felix Salfelder <felix AT salfelder.org>

	* support/regression/Makefile.in:
	  honour EXCLUDE_PORTS in test-mcs51.

2022-05-10 Felix Salfelder <felix AT salfelder.org>

	* support/regression/MakeList:
	  tcc_49_bracket_evaluation excludes on mcs51.

2022-05-10 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCglue.c:
	  Fix bug #3031.
	* src/SDCCerr.h,
	  src/SDCCerr.c,
	  src/SDCCutil.c,
	  src/SDCC.lex,
	  support/valdiag/tests/universal.c:
	  ISO C23 diagnostics for invalid universal character names.

2022-05-02 Benedikt Freisen <b.freisen AT gmx.net>
